[gd_scene load_steps=15 format=2]

[ext_resource path="res://screens/game_screen/GameScreen.gd" type="Script" id=1]
[ext_resource path="res://objects/starfield/Starfield.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/spawners/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/rock/Rock.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/powerups/Powerup.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/powerups/LifePowerup.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/enemies/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://utils/WaveSystem.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sounds/alarm.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/ambient.wav" type="AudioStream" id=11]
[ext_resource path="res://ui/hud/HUD.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "idle"

[sub_resource type="Animation" id=2]
resource_name = "warning"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:offset_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -1.0, 0.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:offset_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="Starfield" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 310.988, 834.589 )

[node name="Bullets" type="Node2D" parent="."]

[node name="Spawners" type="Node2D" parent="."]

[node name="RockSpawner" parent="Spawners" instance=ExtResource( 4 )]
speed = 300.0
time_offset = 1.0
element = ExtResource( 5 )

[node name="PowerupSpawner" parent="Spawners" instance=ExtResource( 4 )]
frequency = 12.0
speed = 150.0
time_offset = 1.0
rand_scale = Vector2( 1, 1 )
element = ExtResource( 6 )

[node name="LifePowerupSpawner" parent="Spawners" instance=ExtResource( 4 )]
frequency = 50.0
speed = 250.0
rand_scale = Vector2( 1, 1 )
element = ExtResource( 7 )
disabled = true

[node name="EnemySpawner" parent="Spawners" instance=ExtResource( 4 )]
frequency = 7.0
element = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/warning = SubResource( 2 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="WaveSystem" parent="." instance=ExtResource( 9 )]

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
pitch_scale = 0.5
bus = "Effects"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 12 )]
